2007-06-18  Milan Zamazal  <pdm@brailcom.org>

	* src/provider/configuration.py (Configuration): Use the right
	path instead of developer's private path in `available_drivers'.

2007-06-16  Hynek Hanke  <hanke@homer.brailcom.xx>

	* src/provider/provider.py: Callbacks and audio events implemented.

	* src/ttsapi/server.py (TCPConnection.process_input): Audio events
	implemented.

	* src/provider/server.py (GlobalState): New class.
	(audio_event_delivery): Implemented.

	* src/provider/event.py (EventQueue): New class;
	(EventPot): New class.
	Reworked.

	* src/provider/driver.py: Event handling reworked. 

	* src/provider/daemon.py: Daemon functionality support library.
	
	* src/provider/server.py: Run as damon.

	* src/provider/configuration.py (Configuration): Mode, pidpath,
	pidfile added. Formatting.

	* doc/tts-api-provider.texi (Server implementation): Information about the current
	implementation added.
	* doc/tts-api-provider.texi: Full node descriptions.

2007-01-06  Hynek Hanke  <hanke@brailcom.org>

	* src/ttsapi/connection.py (SocketConnection._write): Thread safe.

2006-12-30  Hynek Hanke  <hanke@brailcom.org>

	* src/provider/audio.py: Comments, cleanup.
	(Audio.stop): Call Audio.discard().
	(Audio.discard): Cleanup of structures moved here from Audio.stop().

2006-12-29  Hynek Hanke  <hanke@brailcom.org>

	* src/ttsapi/structures.py (AudioEvent): New structure.
	(VoiceDescription._attributes): Minor fixes.

	* src/ttsapi/server.py (TCPConnection): Expanded according
	to TTS API docs.
	(TCPConnection.__init__): New error defined DriverError.
	Improved debugging.

	* src/ttsapi/errors.py (_CommunicationError): New exception.
	(_CommunicationError): New exception.
	(ErrorDriverNotLoaded): New exception.
	(ErrorRetrievalSocketNotInitialized): New exception.

	* src/ttsapi/connection.py (parse_list): Moved out from Connection.
	(SocketConnection.__init__): Initialize logger.
	(SocketConnection.read_data): New method.