@@ -1,5 +1,10 @@
 2007-06-18  Milan Zamazal  <pdm@brailcom.org>
 
+	* src/ttsapi/connection.py (SocketConnection.__init__): Avoid
+	conflict of module and argument names.
+
+2007-06-18  Milan Zamazal  <pdm@brailcom.org>
+
 	* src/provider/configuration.py (Configuration): Use the right
 	path instead of developer's private path in `available_drivers'.
 
